--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "firstcrudapp",
   "version": "1.0.0",
-  "description": "",
+  "description": "CRUD Demo app using MongoDB, JavaScript, Node.js, and Express",
   "main": "index.js",
   "scripts": {
     "dev": "nodemon server.js",
@@ -11,6 +11,7 @@
   "license": "ISC",
   "dependencies": {
     "body-parser": "^1.20.0",
+    "dotenv": "^16.0.1",
     "ejs": "^3.1.8",
     "express": "^4.18.1",
     "mongodb": "^4.6.0"
